더보기 버튼 구현

--- a/about.html
+++ b/about.html
@@ -6,25 +6,24 @@
         <title>하양 맛집 소개</title>
         <link rel="stylesheet" href="./css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <script src="about.js" defer></script>
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
     </head>
     <body>
         <div class="main">
             <nav class="navbar">
-                <i class="fas fa-bars"></i>
                 <div class="nav_logo">
+                    <a href="#" class="nav_toggleBtn">
+                        <i class="fas fa-hamburger"></i>
+                      </a>
                     <a href="main.html">
-                        <p class="logofont">
-                            뭐먹양
-                        </p>
+                        뭐먹양
                     </a>
                 </div>
                 <ul class="nav_menu">
-                    <li> <a href="about.html">한식</a></li>
+                    <li><a href="">한식</a></li>
                     <li><a href="about2.html">양식</a></li>
                     <li><a href="about3.html">일식/중식</a></li>
-                    <li><a href="#">카페/디저트</a></li>
+                    <li><a href="about4.html">카페/디저트</a></li>
                 </ul>
             </nav>
         <header class="inner">
@@ -57,5 +56,6 @@
                 </div>
             </div>
         </div>
+        <script src="./js/about.js"></script>
     </body>
 </html>
