--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-/* /index.html 200
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>하양 맛집 소개</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="./css/main.css">
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
+    </head>
+    <body>
+        <div class="main">
+            <nav class="navbar">
+                <div class="nav_logo">
+                    <a href="#" class="nav_toggleBtn">
+                        <i class="fas fa-hamburger"></i>
+                    </a>
+                    <a href="main.html">
+                        뭐먹양
+                    </a>
+                </div>
+                <ul class="nav_menu">
+                    <li><a href="about.html">한식</a></li>
+                    <li><a href="about2.html">양식</a></li>
+                    <li><a href="about3.html">일식/중식</a></li>
+                    <li><a href="about4.html">카페/디저트</a></li>
+                </ul>
+            </nav>
+            <div class="wel">
+                <p>주인장의 하양 맛집 컬렉숀 <br/>
+                    주인장의 또간집을 둘러보세요!</p>
+            </div>
+            <div class="grid-container">
+                <div class="location-listing">
+                    <a class="location-title">미미관 마라탕</a>
+                    <div class="location-image">
+                        <img src="./imges/미미관.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">스시카츠</a>
+                    <div class="location-image">
+                        <img src="./imges/스시카츠.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">하양돈부리</a>
+                    <div class="location-image">
+                        <img src="./imges/하양돈부리.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">혼샤브</a>
+                    <div class="location-image">
+                        <img src="./imges/혼샤브.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">줄리도넛</a>
+                    <div class="location-image">
+                        <img src="./imges/jully.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">배러댄와플</a>
+                    <div class="location-image">
+                        <img src="./imges/배러댄와플.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">제이네공방</a>
+                    <div class="location-image">
+                        <img src="./imges/제이네.jpg"/>
+                    </div>
+                </div>
+                <div class="location-listing">
+                    <a class="location-title">퀴다</a>
+                    <div class="location-image">
+                        <img src="./imges/퀴다.jpg"/>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="moreBtn">더보기</button>
+        </div>
+        <script src="./js/data.js" charset="UTF-8"></script>
+        <script src="./js/about.js" charset="UTF-8"></script>
+        <script src="./js/jquery.js"></script>
+    </body>
+</html>
