각 메뉴별 리스트 페이지 html 완성

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                     <a href="#" class="nav_toggleBtn">
                         <i class="fas fa-hamburger"></i>
                       </a>
-                    <a href="main.html">
+                    <a href="index.html">
                         뭐먹양
                     </a>
                 </div>
@@ -26,35 +26,66 @@
                     <li><a href="about4.html">카페/디저트</a></li>
                 </ul>
             </nav>
-        <header class="inner">
-            <h1 style="font-size: 20px;">한식</h1>
-            <p style="font-size: 16px;">한국인은 밥심!</p>
-        </header>
-        <div class="grid-container">
-            <div class="location-listing">
-                <a class="location-title">미미관 마라탕</a>
-                <div class="location-image">
-                    <img src="./imges/미미관.jpg"/>
-                </div>
-            </div>
-            <div class="location-listing">
-                <a class="location-title">스시카츠</a>
-                <div class="location-image">
-                    <img src="./imges/스시카츠.jpg"/>
-                </div>
-            </div>
-            <div class="location-listing">
-                <a class="location-title">하양돈부리</a>
-                <div class="location-image">
-                    <img src="./imges/하양돈부리.jpg"/>
-                </div>
-            </div>
-            <div class="location-listing">
-                <a class="location-title">혼샤브</a>
-                <div class="location-image">
-                    <img src="./imges/혼샤브.jpg"/>
+            <header class="inner">
+                <h1 style="font-size: 20px;">한식</h1>
+                <p style="font-size: 16px;">한국인은 밥심!</p>
+            </header>
+            <div class="container">
+                <div class="foodlist">
+                    <ul class="list">
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/유가네.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">유가네 닭갈비</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/하양연가.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">하양연가</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/엄마분식.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">엄마 떡볶이</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/명랑.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">명랑 핫도그</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
+        <script src="./js/data.js"></script>
+        <script src="./js/about.js"></script>
     </body>
 </html>
