--- a/about2.html
+++ b/about2.html
@@ -16,7 +16,7 @@
                     <a href="#" class="nav_toggleBtn">
                         <i class="fas fa-hamburger"></i>
                     </a>
-                    <a href="main.html">
+                    <a href="index.html">
                         뭐먹양
                     </a>
                 </div>
@@ -36,7 +36,7 @@
                     <ul class="list">
                         <li class="fooditem">
                             <figure class="fig">
-                                <img src="./imges/퀴다.jpg" width="100px" height="100px"/>
+                                <img src="./imges/퀴다.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">퀴다</h2>
