--- a/about3.html
+++ b/about3.html
@@ -5,187 +5,123 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
   maximum-scale=1.0, minimum-scale=1.0">
         <title>하양 맛집 소개</title>
-        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <script src="about.js" defer></script>
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
     </head>
     <body>
-        <!-- <main>
-        <article class="contents">
-        -->
-        <nav class="navbar">
-            <div class="nav_logo">
-              <i class="fas fa-bars" aria-hidden="true"></i>
-                <a href="main.html">food</a>
-            </div>
-            <ul class="nav_menu">
-                <li> <a href="about.html">한식</a></li>
-                <li><a href="about2.html">양식</a></li>
-                <li><a href="#">일식/중식</a></li>
-                <li><a href="about4.html">분식</a></li>
-                <li><a href="about5.html">카페/디저트</a></li>
-            </ul>
-
-            <a href="#" class="btn">
-                <i class="fas fa-bars" aria-hidden="true"></i>
-            </a>
-        </nav>
-
-        <header class="inner">
-            <h1>일식/중식</h1>
-            <p style="font-size: 18px;">음~ 맛있다</p>
-        </header>
-         <div class="container">
-            <div class="foodlist">
-                <ul class="rest">
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/1058.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">1058면</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양로 63 2층</p>
-                                        </span>
-                                        <p class="pls">정보 더보기</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/델꼬.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">델꼬</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양역길 27</p>
-                                        </span>
-                                        <p class="pls">정보 더보기</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/멘마.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">멘마아쯔리</h2>
-                                            <p class="dnl">경상북도 경산시 하양읍 하양역길 18</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/미미관.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">미미관마라탕</h2>
-                                            <p class="dnl">경북 경산시 하양읍 문화로 16-1 1층</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/스시카츠.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">스시카츠</h2>
-                                            <p class="dnl">경북 경산시 하양읍 대경로 669-6 1층</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/키햐야.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">키햐아</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양역길 20 2층 키햐아 하양점</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/타코파파.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">타코파파</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양로 53</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/하양돈부리.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">하양돈부리</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양역길 18 하양돈부리</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/간큰스시.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">간큰스시</h2>
-                                            <p class="dnl">경북 경산시 하양읍 대경로147길 14</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
+        <div class="main">
+            <nav class="navbar">
+                <div class="nav_logo">
+                    <a href="#" class="nav_toggleBtn">
+                        <i class="fas fa-hamburger"></i>
+                    </a>
+                    <a href="index.html">
+                        뭐먹양
+                    </a>
+                </div>
+                <ul class="nav_menu">
+                    <li><a href="about.html">한식</a></li>
+                    <li><a href="about2.html">양식</a></li>
+                    <li><a href="">일식/중식</a></li>
+                    <li><a href="about4.html">카페/디저트</a></li>
                 </ul>
+            </nav>
+            <header class="inner">
+                <h1 style="font-size: 20px;">일식/중식</h1>
+                <p style="font-size: 16px;">초밥 조아</p>
+            </header>
+            <div class="container">
+                <div class="foodlist">
+                    <ul class="list">
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/1058.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">1058라멘</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/델꼬.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">델꼬</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/미미관.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">미미관 마라탕</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/스시카츠.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">스시카츠</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/타코파파.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">타코파파</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/하양돈부리.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">하양돈부리</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li class="fooditem">
+                            <figure class="fig">
+                                <img src="./imges/혼샤브.jpg"/>
+                                <figcaption>
+                                    <span>
+                                        <h2 class="itemName">혼샤브</h2>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                    </span>
+                                    <p class="aboutBtn">정보 더보기</p>
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+        <script src="./js/about.js" ></script>
     </body>
 </html>
