--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="#" class="nav_toggleBtn">
                         <i class="fas fa-hamburger"></i>
                     </a>
-                    <a href="main.html">
+                    <a href="index.html">
                         뭐먹양
                     </a>
                 </div>
