각 가게 상세페이지로 value값 넘기기

--- a/about3.html
+++ b/about3.html
@@ -13,7 +13,7 @@
         <div class="main">
             <nav class="navbar">
                 <div class="nav_logo">
-                    <a href="#" class="nav_toggleBtn">
+                    <a class="nav_toggleBtn">
                         <i class="fas fa-hamburger"></i>
                     </a>
                     <a href="index.html">
@@ -34,15 +34,15 @@
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
-                        <li class="fooditem">
+                        <li class="fooditem" id="k" value="1">
                             <figure class="fig">
                                 <img src="./imges/1058.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">1058라멘</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양로 63 2층</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
