--- a/about4.html
+++ b/about4.html
@@ -13,7 +13,7 @@
         <div class="main">
             <nav class="navbar">
                 <div class="nav_logo">
-                    <a href="#" class="nav_toggleBtn">
+                    <a class="nav_toggleBtn">
                         <i class="fas fa-hamburger"></i>
                     </a>
                     <a href="index.html">
