--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <div class="main">
             <nav class="navbar">
                 <div class="nav_logo">
-                    <a href="#" class="nav_toggleBtn">
+                    <a class="nav_toggleBtn">
                         <i class="fas fa-hamburger"></i>
                       </a>
                     <a href="index.html">
@@ -33,39 +33,39 @@
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
-                        <li class="fooditem">
+                        <li class="fooditem" id="k" value="11" >
                             <figure class="fig">
                                 <img src="./imges/유가네.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">유가네 닭갈비</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 문화로 2 2층 유가네닭갈비 경산하양점</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="y" value="14" >
                             <figure class="fig">
                                 <img src="./imges/하양연가.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">하양연가</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 대경로 669-3</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + y.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" >
                             <figure class="fig">
                                 <img src="./imges/엄마분식.jpg"/>
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">엄마 떡볶이</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양로 96-1</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
@@ -75,9 +75,9 @@
                                 <figcaption>
                                     <span>
                                         <h2 class="itemName">명랑 핫도그</h2>
-                                        <p class="itemAd">경북 경산시 하양읍 대경로 653 휴가오피스텔 103호</p>
+                                        <p class="itemAd">경북 경산시 하양읍 하양로 74-1</p>
                                     </span>
-                                    <p class="aboutBtn">정보 더보기</p>
+                                    <p class="aboutBtn" onclick="location.href='about1.html?' + k.value">정보 더보기</p>
                                 </figcaption>
                             </figure>
                         </li>
