--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>하양 맛집 소개</title>
+        <title>뭐먹양 | 하양 맛집</title>
         <link rel="stylesheet" href="./css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
