네비게이션바 애니메이션 추가

--- a/about1.html
+++ b/about1.html
@@ -29,7 +29,7 @@
             </nav>
             <div class="contents">
                 <figure class="fig">
-                    <img src="./imges/유가네.jpg"/>
+                    <img class="imgs"/>
                     <figcaption>
                         <span>
                             <h2 class="foodName"></h2>
@@ -61,32 +61,6 @@
             </div>
         </div>
         <script src="./js/data.js"></script>
-        <script>
-            temp = location.href.split("?");
-            data = temp[1].split(",");
-            value = data[0];
-            console.log(value);
-            
-            const foodName = document.querySelector('.foodName');
-            const foodAd = document.querySelector('.foodAd');
-            const time = document.querySelector('.time');
-            const comment = document.querySelector('.comment');
-            const menu1 = document.querySelector('.menu1');
-            const menu2 = document.querySelector('.menu2');
-            const menu3 = document.querySelector('.menu3');
-
-            const foodId = Number(value);
-            // 해당 데이터 가져오기 콜백함수가 숫자라서 Number 써줘야하는듯?
-            const targetData = restaurant.find((data) => data.id === foodId);
-            console.log(targetData);
-            foodName.innerText = targetData.name;
-            foodAd.innerText = targetData.addres;
-            comment.innerText = targetData.comment;
-            time.innerText = targetData.time;
-            menu1.innerText = targetData.menu1;
-            menu2.innerText = targetData.menu2;
-            menu3.innerText = targetData.menu3;
-        </script>
         <script src="./js/about.js"></script>
     </body>
 </html>
