--- a/about3.html
+++ b/about3.html
@@ -122,6 +122,6 @@
                 </div>
             </div>
         </div>
-        <script src="./js/about.js" ></script>
+        <script src="./js/index.js" charset="UTF-8"></script>
     </body>
 </html>
