--- a/about4.html
+++ b/about4.html
@@ -74,6 +74,6 @@
                 </div>
             </div>
         </div>
-        <script src="./js/about.js" defer></script>
+        <script src="./js/index.js" charset="UTF-8"></script>
     </body>
 </html>
