--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="about4.html">카페/디저트</a></li>
                 </ul>
             </nav>
-            <div class="wel">
+            <div class="inner">
                 <p>주인장의 하양 맛집 컬렉숀 <br/>
                     주인장의 또간집을 둘러보세요!</p>
             </div>
