--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
                     <li><a href="about4.html">카페/디저트</a></li>
                 </ul>
             </nav>
-            <header class="inner">
+            <div class="inner">
                 <h1 style="font-size: 20px;">한식</h1>
                 <p style="font-size: 16px;">한국인은 밥심!</p>
-            </header>
+            </div>
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
@@ -86,6 +86,6 @@
             </div>
         </div>
         <script src="./js/data.js"></script>
-        <script src="./js/about.js"></script>
+        <script src="./js/index.js" charset="UTF-8"></script>
     </body>
 </html>
