--- a/about2.html
+++ b/about2.html
@@ -62,6 +62,6 @@
                 </div>
             </div>
         </div>
-        <script src="./js/about.js" defer></script>
+        <script src="./js/index.js" charset="UTF-8"></script>
     </body>
 </html>
