네비바 애니메이션 추가

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <button type="button" class="moreBtn">더보기</button>
         </div>
         <script src="./js/data.js" charset="UTF-8"></script>
-        <script src="./js/about.js" charset="UTF-8"></script>
+        <script src="./js/index.js" charset="UTF-8"></script>
         <script src="./js/jquery.js"></script>
     </body>
 </html>
