이상한키친 데이터 추가

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
-                        <li class="fooditem" id="k" value="11" >
+                        <li class="fooditem" id="a" value="11" >
                             <figure class="fig">
                                 <img src="./imges/유가네.jpg"/>
                                 <figcaption>
@@ -45,7 +45,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem" id="y" value="14" >
+                        <li class="fooditem" id="b" value="14" >
                             <figure class="fig">
                                 <img src="./imges/하양연가.jpg"/>
                                 <figcaption>
@@ -57,7 +57,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem" >
+                        <li class="fooditem" id="c" value="9" >
                             <figure class="fig">
                                 <img src="./imges/엄마분식.jpg"/>
                                 <figcaption>
@@ -69,7 +69,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="d" value="4">
                             <figure class="fig">
                                 <img src="./imges/명랑.jpg"/>
                                 <figcaption>
