--- a/about2.html
+++ b/about2.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="foodlist">
                     <ul class="list">
-                        <li class="fooditem" id="k" value="10">
+                        <li class="fooditem" id="a" value="10">
                             <figure class="fig">
                                 <img src="./imges/퀴다.jpg"/>
                                 <figcaption>
@@ -46,7 +46,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li class="fooditem">
+                        <li class="fooditem" id="b" value="16">
                             <figure class="fig">
                                 <img src="./imges/이상한키친.jpg"/>
                                 <figcaption>
